...
        collectionView.delegate = self
        return collectionView
    }()
    
    private lazy var searchBar: UISearchBar = {
        let searchBar = UISearchBar()
        searchBar.searchTextField.accessibilityIdentifier = "searchTextField"
        searchBar.placeholder = "Search an image"
        searchBar.searchTextField.backgroundColor = .clear
        searchBar.showsBookmarkButton = true
        searchBar.setImage(UIImage(systemName: "line.3.horizontal.decrease.circle"), for: .bookmark, state: .normal)
        searchBar.layer.borderWidth = 1
        searchBar.layer.borderColor = UIColor.systemGray.cgColor
...
