...
}


// MARK: - UI Setup
extension ImageDetailView {
    private func setupUI() {
        view.accessibilityIdentifier = "ImageDetailView"
        view.backgroundColor = .secondarySystemBackground
        view.addSubviewsExt(imageView,
                            imageTags,
                            userImage,
                            userName,
                            viewsImage,
...
